Changing notation of NX1 1' ones vector

--- a/code/montecarlo_simulation.ipynb
+++ b/code/montecarlo_simulation.ipynb
@@ -77,17 +77,17 @@
     "\n",
     "In this case, we got $n$ friends, so we got $n$ yes, obtaining this:\n",
     "\n",
-    "$$\\text{P(R = 1 | Q = \\textit{\\textbf{1}})} = \\dfrac{\\text{P( Q = \\textit{\\textbf{1}}| R = 1) * P(R = 1)}}{\\text{P(Q = \\textit{\\textbf{1}})}} $$\n",
+    "$$\\text{P(R = 1 | Q = 1')} = \\dfrac{\\text{P( Q = 1'| R = 1) * P(R = 1)}}{\\text{P(Q = 1')}} $$\n",
     "\n",
-    "where $\\textit{\\textbf{1}}$ is a $NX1$ vector of ones.\n",
+    "where $1'$ is a $NX1$ vector of ones.\n",
     "\n",
     "With that in mind, we obtain:\n",
     "\n",
-    "- $\\text{P(R = 1 | Q = \\textit{\\textbf{1}})}  = \\text{P(N Telling the truth and independent)} = \\prod_{i = 1}^{N} P(Truth) = {\\left( \\dfrac{2}{3} \\right)}^{n}$\n",
+    "- $\\text{P(R = 1 | Q = 1')}  = \\text{P(N Telling the truth and independent)} = \\prod_{i = 1}^{N} P(Truth) = {\\left( \\dfrac{2}{3} \\right)}^{n}$\n",
     "- $\\text{P(Raining = True) = 0.5}$\n",
     "- $\\text{P(Q = 1)}$ that will be estimated like this\n",
     "\n",
-    "$$\\text{P(Q = \\textit{\\textbf{1}})} = \\text{P(Q = \\textit{\\textbf{1}}} \\cap \\text{R = 1)} + \\text{P(Q = \\textit{\\textbf{1}}} \\cap \\text{R = 0)} $$\n",
+    "$$\\text{P(Q = 1')} = \\text{P(Q = 1'} \\cap \\text{R = 1)} + \\text{P(Q = 1'} \\cap \\text{R = 0)} $$\n",
     "$$=\\text{P(N Truth} \\cap \\text{R = 1)} + \\text{P(N Lie} \\cap \\text{R = 0)} $$\n",
     "$$=\\text{P(N Truth)} * \\text{P(R = 1)} + \\text{P(N Lie)} * \\text{P(R = 0)} $$\n",
     "$$=\\text{P(N Truth)} * \\text{P(R = 1)} + \\text{P(N Lie)} * \\text{(1 - P(R = 1))} $$\n",
@@ -95,13 +95,13 @@
     "\n",
     "So finally, we got:\n",
     "\n",
-    "$$\\text{P(R = 1 | Q = \\textit{\\textbf{1}})} = \\dfrac{\\text{P( Q = \\textit{\\textbf{1}}| R = 1) * P(R = 1)}}{\\text{P(Q = \\textit{\\textbf{1}})}} = \\dfrac{ {\\left( \\dfrac{2}{3} \\right)}^{n} * 0.5}{ {\\left( \\dfrac{2}{3} \\right)}^{n} * 0.5 + {\\left( \\dfrac{1}{3} \\right)}^{n} * \\text{(1 - 0.5)} } $$\n",
+    "$$\\text{P(R = 1 | Q = 1')} = \\dfrac{\\text{P( Q = 1'| R = 1) * P(R = 1)}}{\\text{P(Q = 1')}} = \\dfrac{ {\\left( \\dfrac{2}{3} \\right)}^{n} * 0.5}{ {\\left( \\dfrac{2}{3} \\right)}^{n} * 0.5 + {\\left( \\dfrac{1}{3} \\right)}^{n} * \\text{(1 - 0.5)} } $$\n",
     "\n",
     "### Case \\#3: Just 3 friends\n",
     "\n",
     "With that in mind, the probability that we are looking takes this form:\n",
     "\n",
-    "$$\\text{P(R = 1 | Q = \\textit{\\textbf{1}})} = \\dfrac{\\text{P( Q = \\textit{\\textbf{1}}| R = 1) * P(R = 1)}}{\\text{P(Q = \\textit{\\textbf{1}})}} = \\dfrac{ {\\left( \\dfrac{2}{3} \\right)}^{3} * 0.5}{ {\\left( \\dfrac{2}{3} \\right)}^{3} * 0.5 + {\\left( \\dfrac{1}{3} \\right)}^{3} * \\text{(1 - 0.5)} } = \\dfrac{8}{9} \\approx 88.9\\%$$\n",
+    "$$\\text{P(R = 1 | Q = 1')} = \\dfrac{\\text{P( Q = 1'| R = 1) * P(R = 1)}}{\\text{P(Q = 1')}} = \\dfrac{ {\\left( \\dfrac{2}{3} \\right)}^{3} * 0.5}{ {\\left( \\dfrac{2}{3} \\right)}^{3} * 0.5 + {\\left( \\dfrac{1}{3} \\right)}^{3} * \\text{(1 - 0.5)} } = \\dfrac{8}{9} \\approx 88.9\\%$$\n",
     "\n",
     "### Montecarlo simulation: 3 friends\n"
    ]
