Fixing some comments on bayesian analysis

--- a/code/montecarlo_simulation.ipynb
+++ b/code/montecarlo_simulation.ipynb
@@ -112,6 +112,7 @@
     "- Because it is a montecarlo simulation, we are more interest about a distribution of the outcome more than a single point, because of that we will repite the simulation 1000 times (reps parameter), and each time will performed 10000 simulations.\n",
     "- This approach will solved this problem from a frequentist point of view using this algorithm\n",
     "     - Because we have the condition that all friends say \"yes\" they could be all telling the truth or a lie, we are going to model that and see each simulation how many times all of them say the truth (times_rained_and_say_3_yes) or a lie (times_no_rained_and_say_3_yes).\n",
+    "     - Then, we are going to model if there is raining or not, and only if we got a raining and all of then are telling the truth/a lie, this counter times_rained_and_say_3_yes/times_no_rained_and_say_3_yes will increase.\n",
     "     - Given that, we can compute this probability following this calculation:\n",
     "     \n",
     "     $$\\text{P(R = 1 | Q = 1')} = \\dfrac{\\text{Favorable Cases}}{\\text{Possible Cases}} = \\dfrac{\\text{times\\_rained\\_and\\_say\\_3\\_yes}}{\\text{times\\_rained\\_and\\_say\\_3\\_yes + times\\_no\\_rained\\_and\\_say\\_3\\_yes}}$$"
