Adding formula description for performance attribution

--- a/code/hedging_analysis.ipynb
+++ b/code/hedging_analysis.ipynb
@@ -642,12 +642,30 @@
     "\n",
     "Based on previous weights be got:\n",
     "- $\\text{initValTQQQ} = \\$1.000.000$\n",
-    "- $\\text{initValQLD} = -\\$1.500.000$ "
+    "- $\\text{initValQLD} = -\\$1.500.000$ \n",
+    "\n",
+    "Given the returns of each asset, we can construct a performance attribution based on this calculations:\n",
+    "\n",
+    "Valuation of assets\n",
+    "- $\\text{ValTQQQ [}\\$\\text{]}_{t} = \\text{ValTQQQ [}\\$\\text{]}_{t - 1} * R_{TQQQ, t}$\n",
+    "- $\\text{ValQLD [}\\$\\text{]}_{t} = \\text{ValQLD [}\\$\\text{]}_{t - 1} * R_{QLD, t}$\n",
+    "- $\\text{ValPort [}\\$\\text{]}_{t} = \\text{ValTQQQ [}\\$\\text{]}_{t} + \\text{ValQLD [}\\$\\text{]}_{t}$\n",
+    "\n",
+    "Return of portfolio\n",
+    "- $\\text{RetPort [}\\$\\text{]}_{t} = \\dfrac{\\text{ValPort [}\\$\\text{]}_{t}}{\\text{ValPort [}\\$\\text{]}_{t - 1}} - 1 = \\text{Contr TQQQ}_{t} + \\text{Contr QLD}_{t} $\n",
+    "\n",
+    "Weights (Participation)\n",
+    "- $ w_{TQQQ, t} = \\dfrac{\\text{ValTQQQ [}\\$\\text{]}_{t}}{\\text{ValPort [}\\$\\text{]}_{t}}$\n",
+    "- $ w_{QLD, t} = \\dfrac{\\text{ValQLD [}\\$\\text{]}_{t}}{\\text{ValPort [}\\$\\text{]}_{t}}$\n",
+    "\n",
+    "Contribution\n",
+    "- $\\text{Contr TQQQ}_{t} = \\text{RetPort [}\\$\\text{]}_{t} * w_{TQQQ, t}$\n",
+    "- $\\text{Contr QLD}_{t} = \\text{RetPort [}\\$\\text{]}_{t} * w_{QLD, t}$\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 453,
+   "execution_count": 471,
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +674,7 @@
        "<Axes: title={'center': 'Cummulative return time series [%]'}, xlabel='date_hour'>"
       ]
      },
-     "execution_count": 453,
+     "execution_count": 471,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1050,7 +1068,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With the \"buy-and-hold\" strategy, we obtain 5.09% return (2023-02-21). Despite the fact we assume that both assets track the same underlying when we calculate a rolling window correlation we see that it is not always -1, and the same "
+    "With the \"buy-and-hold\" strategy, we obtain 5.09% return (2023-02-21). Despite the fact we assume that both assets track the same underlying when we calculate a rolling window correlation we see that it is not always -1, and the same happends with the covariance and portfolio variance."
    ]
   },
   {
