--- a/code/hedging_analysis.ipynb
+++ b/code/hedging_analysis.ipynb
@@ -1190,7 +1190,7 @@
    "source": [
     "## Conclusion Buy-and-Hold strategy\n",
     "\n",
-    "Based on this strategy, despite the fact the expected return of this portfolio was 0, we saw how between 2022-11-22 and 2023-02-21 we obtained a 5.09% of return (value portfolio was -$500.000 and finished -$525.472). This could be explained that we have 2 different underlyings (2 not perfect Nasdaq100 index composition).\n",
+    "Based on this strategy, despite the fact the expected return of this portfolio was 0, we saw how between 2022-11-22 and 2023-02-21 we obtained a 5.09% of return (value portfolio was -\\$500.000 and finished -\\$525.472). This could be explained that we have 2 different underlyings (2 not perfect Nasdaq100 index composition).\n",
     "\n",
     "## RSI Strategy\n",
     "\n",
