--- a/code/hedging_analysis.ipynb
+++ b/code/hedging_analysis.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
        "[244 rows x 4 columns]"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +320,7 @@
        "[244 rows x 3 columns]"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +453,7 @@
        "[122 rows x 2 columns]"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +474,7 @@
        "<Axes: title={'center': 'Price time series [$]'}, xlabel='date_hour'>"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
        "2022-11-30 15:00:00  0.091325  0.134328"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
        "<Axes: title={'center': 'Log. return time series [%]'}, xlabel='date_hour'>"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 152,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -665,7 +665,7 @@
        "<Axes: title={'center': 'cumulative return time series [%]'}, xlabel='date_hour'>"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -701,7 +701,7 @@
        "<Axes: title={'center': 'Value time series [$]'}, xlabel='date_hour'>"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -728,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +830,7 @@
        "2023-02-21 15:00:00 -525472.500983  "
       ]
      },
-     "execution_count": 123,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -841,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -914,7 +914,7 @@
        "2023-02-21 15:00:00  2.937195 -1.937195"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -928,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -937,7 +937,7 @@
        "<Axes: title={'center': 'Performance attribution - Cumulative return [%]'}, xlabel='date_hour'>"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -965,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -1045,7 +1045,7 @@
        "2023-02-21 15:00:00   8.683081  -3.588581  5.094500"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1059,12 +1059,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With the \"buy-and-hold\" strategy, we obtain 5.09% return (2023-02-21). Despite the fact we assume that both assets track the same underlying when we calculate a rolling window correlation we see that it is not always -1, and the same happends with the covariance and portfolio variance."
+    "With the \"buy-and-hold\" strategy, we obtain 5.09% return (2023-02-21). Despite the fact we assume that both assets track the same underlying when we calculate a rolling window correlation we see that it is not always -1, and the same happens with the covariance and portfolio variance."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -1084,16 +1084,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1791cc9d0>"
+       "<matplotlib.legend.Legend at 0x14028f8e0>"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1119,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -1128,7 +1128,7 @@
        "<Axes: title={'center': 'Price time series [$]'}, xlabel='date_hour'>"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1149,7 +1149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -1190,11 +1190,11 @@
    "source": [
     "## Conclusion Buy-and-Hold strategy\n",
     "\n",
-    "Based on this strategy, despite the fact the expected return of this portfolio was 0, we saw how between 2022-11-22 and 2023-02-21 we obtained a 5.09% of return (value portfolio was -\\$500.000 and finished -\\$525.472). This could be explained that we have 2 different underlyings (2 not perfect Nasdaq100 index composition).\n",
+    "Based on this strategy, despite the fact the expected return of this portfolio was 0, we saw how between 2022-11-22 and 2023-02-21 we obtained a 5.09% of return (portfolio's value was -\\$500.000 and finished -$525.472). This could be explained by having 2 different underlyings (2 not perfect Nasdaq100 index composition).\n",
     "\n",
     "## RSI Strategy\n",
     "\n",
-    "As we saw on cumulative return, the portfolio start creating a positive return after the first week of January, when the cumulative return of QLD started increasing, so the intuition behind this is that if the proportion of QLD inside the portfolio increase (a decrease on USD), we need to reduce its proportion (an increase on USD), reducing the short size of QLD, buy QLD stocks.\n",
+    "As we saw on cumulative return, the portfolio starts creating a positive return after the first week of January, when the cumulative return of QLD started increasing, so the intuition behind this is that if the proportion of QLD inside the portfolio increase (a decrease on USD), we need to reduce its proportion (an increase on USD), reducing the short size of QLD, buy QLD stocks.\n",
     "\n",
     "Because of that I propose a simple strategy based on a comparison between RSI indexes of QLD and TQQQ.\n",
     "\n",
@@ -1211,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -1399,7 +1399,7 @@
        "2023-02-21 15:00:00      0.024118  "
       ]
      },
-     "execution_count": 131,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1438,7 +1438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -1504,7 +1504,7 @@
        "2023-02-21 15:00:00   72.354305"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1517,7 +1517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -1583,7 +1583,7 @@
        "max    1598.607149"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1594,7 +1594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -1603,7 +1603,7 @@
        "<Axes: title={'center': 'Value time series [$] RSI Strategy'}, xlabel='date_hour'>"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 166,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1637,7 +1637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -1646,7 +1646,7 @@
        "<Axes: title={'center': 'Cumulative return [%] - RSI Strategy'}, xlabel='date_hour'>"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1669,7 +1669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -1735,7 +1735,7 @@
        "2023-02-21 15:00:00    2.054497"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 168,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1751,7 +1751,7 @@
    "source": [
     "## Conclusions RSI strategy\n",
     "\n",
-    "With this strategy, we reduce the cumulative return of the portfolio from 5.09% to 2.05%."
+    "With this strategy, we reduced the cumulative return of the portfolio from 5.09% to 2.05%."
    ]
   },
   {
