--- a/code/quant_questions.ipynb
+++ b/code/quant_questions.ipynb
@@ -65,10 +65,26 @@
     "\n",
     "Based on this we could have 2 possible outcomes. \n",
     "\n",
-    "-    If Microsoft (short position) has a higher expected return than Apple, then the expected return of the portfolio will increase and the portfolio's risk will decrease.\n",
+    "-    If Microsoft (short position) has a higher expected return than Apple, then the expected return of the portfolio will decrease and the portfolio's risk will increase.\n",
     "\n",
-    "-    On the other hand, if Microsoft has a lower expected return, the expected return of the portfolio will decrease and the portfolio's risk will decrease as well.\n",
+    "<img src=\"../utils/MSFT_>_AAPL.png\" \n",
+    "     align=\"center\"\n",
+    "     width=\"500\" />\n",
     "\n",
+    "-    On the other hand, if Microsoft has a lower expected return, the expected return of the portfolio will increase and the portfolio's risk will increase as well.\n",
+    "\n",
+    "<img src=\"../utils/AAPL_%3E_MSFT.png\" \n",
+    "     align=\"center\"\n",
+    "     width=\"500\" />\n",
+    "\n",
+    "     \n",
+    "This can be summarize in these 2 equations:\n",
+    "\n",
+    "$$R_{port} = w_{AAPL} * R_{AAPL} + w_{MSFT} * R_{MSFT}$$\n",
+    "\n",
+    "and \n",
+    "\n",
+    "$$ \\sigma(R_{port}) = w_{AAPL} * \\sigma(R_{AAPL}) -  w_{MSFT} * \\sigma(R_{MSFT})  >= 0$$\n",
     "\n",
     "### 6. Why is it more important to correlate alpha return (vs market index) than total return?\n",
     "\n",
