--- a/code/montecarlo_simulation.ipynb
+++ b/code/montecarlo_simulation.ipynb
@@ -83,7 +83,7 @@
     "\n",
     "With that in mind, we obtain:\n",
     "\n",
-    "- $\\text{P(R = 1 | Q = 1')}  = \\text{P(N Telling the truth and independent)} = \\prod_{i = 1}^{N} P(Truth) = {\\left( \\dfrac{2}{3} \\right)}^{n}$\n",
+    "- $\\text{P(Q = 1' | R = 1 )}  = \\text{P(N Telling the truth and independent)} = \\prod_{i = 1}^{N} P(Truth) = {\\left( \\dfrac{2}{3} \\right)}^{n}$\n",
     "- $\\text{P(Raining = True) = 0.5}$\n",
     "- $\\text{P(Q = 1)}$ that will be estimated like this\n",
     "\n",
