--- a/code/montecarlo_simulation.ipynb
+++ b/code/montecarlo_simulation.ipynb
@@ -115,7 +115,7 @@
     "     - Then, we are going to model if there is raining or not, and only if we got a raining and all of then are telling the truth/a lie, this counter times_rained_and_say_3_yes/times_no_rained_and_say_3_yes will increase.\n",
     "     - Given that, we can compute this probability following this calculation:\n",
     "     \n",
-    "     $$\\text{P(R = 1 | Q = 1')} = \\dfrac{\\text{Favorable Cases}}{\\text{Possible Cases}} = \\dfrac{\\text{times\\_rained\\_and\\_say\\_3\\_yes}}{\\text{times\\_rained\\_and\\_say\\_3\\_yes + times\\_no\\_rained\\_and\\_say\\_3\\_yes}}$$"
+    "     $$\\text{P(R = 1 | Q = 1')} = \\dfrac{\\text{Favorable Cases}}{\\text{Possible Cases}} = \\dfrac{\\text{times rained and say 3 yes}}{\\text{times rained and say 3 yes + times no rained and say 3 yes}}$$"
    ]
   },
   {
