--- a/code/montecarlo_simulation.ipynb
+++ b/code/montecarlo_simulation.ipynb
@@ -314,7 +314,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see, the montecarlo simulation give us round 88.89% as mean probability of rain given 3 yes, meanwhile the closed-form solution give us arrounf 88.9% of probability of rain given 3 yes."
+    "As we can see, the montecarlo simulation give us round 88.89% as mean probability of rain given 3 yes, meanwhile the closed-form solution give us arround 88.9% of probability of rain given 3 yes."
    ]
   },
   {
