--- a/code/quant_questions.ipynb
+++ b/code/quant_questions.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "This problem can be solved using a negative binomial approach since we are looking that each new birth could be seen as a Bernoulli trial (2 possible outcomes, iid, and no time-changing probabilities).\n",
     "\n",
-    "Given a sequence of independent Bernoulli trials (a birth), with 2 possible outcomes (girl or boy), each outcome has a probability of success $p$ (girl) and faiure $1-p$ (boy), we observe this sequence until a determined number of successes occurs (1 girl), so the number of failures (# of boys) follows the Negative Binomial distribution. In this case, let's assume that $p = 1 - p = 0.5$ the probability of having a girl or a boy.\n",
+    "Given a sequence of independent Bernoulli trials (a birth), with 2 possible outcomes (girl or boy), each outcome has a probability of success $p$ (girl) and faiure $1-p$ (boy), we observe this sequence until a determined number of successes $r$ occurs (1 girl), so the number of failures (# of boys) follows the Negative Binomial distribution. In this case, let's assume that $p = 1 - p = 0.5$ the probability of having a girl or a boy.\n",
     "\n",
     "$$\\text{\\# of boys} \\sim BN(r, p) = BN(1, 0.5)$$\n",
     "\n",
