--- a/code/hedging_analysis.ipynb
+++ b/code/hedging_analysis.ipynb
@@ -1205,8 +1205,8 @@
     "\n",
     "Because of that I propose a simple strategy based on a comparison between RSI indexes of QLD and TQQQ.\n",
     "\n",
-    "- If $RSA_{QLD} - RSI_{TQQQ} > 0$ &rarr; **BUY QLD** &rarr; **Reduce QLD proportion** &rarr; **Increase USD value** &rarr; **Reduce Short Position** \n",
-    "- If $RSA_{QLD} - RSI_{TQQQ} < 0$ &rarr; **SELL QLD** &rarr; **Increase QLD proportion** &rarr; **Decrease USD value** &rarr; **Increase Short Position** \n",
+    "- If $RSI_{QLD} - RSI_{TQQQ} > 0$ &rarr; **BUY QLD** &rarr; **Reduce QLD proportion** &rarr; **Increase USD value** &rarr; **Reduce Short Position** \n",
+    "- If $RSI_{QLD} - RSI_{TQQQ} < 0$ &rarr; **SELL QLD** &rarr; **Increase QLD proportion** &rarr; **Decrease USD value** &rarr; **Increase Short Position** \n",
     "\n",
     "Finally, based on an empirical approximation, we define the size of the purchase like this:\n",
     "\n",
